--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@
   line-height: 140%; /* 22.4px */
 }
 .header__mobile {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   border: 1px solid #000;
   display: none;
 }
@@ -464,5 +464,8 @@
 @media (max-width: 385px) {
   .header__body-left {
     width: 200px;
+  }
+  .header__info-block-right {
+    width: 300px;
   }
 }/*# sourceMappingURL=style.css.map */
