--- a/style.css
+++ b/style.css
@@ -343,6 +343,40 @@
     text-transform: capitalize;
   }
 }
+@media (max-width: 680px) {
+  .header__body-right-btn {
+    height: 30px;
+  }
+  .header__info-block-left-title {
+    max-width: 370px;
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 39.2px */
+    text-transform: capitalize;
+  }
+  .header__info-block-left-descr {
+    max-width: 320px;
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+    padding-top: 2px;
+  }
+  .header__mob-info-block-right {
+    border-radius: 20px 20px;
+    background: var(--Background---Secondary, #3B3B3B);
+    margin-top: 10px;
+  }
+  .header__info-block-right-image {
+    width: 290px;
+    height: 205px;
+  }
+}
 /* Стилі для дуже малих екранів (дисплей максимум 575рх) */
 @media (max-width: 575px) {
   .header__mobile {
@@ -370,29 +404,6 @@
     align-items: center;
     justify-content: space-between;
     max-width: 400px;
-    margin: 0 auto;
-  }
-  .header__info-block-left-title {
-    text-align: center;
-    max-width: 370px;
-    color: var(--White, #FFF);
-    font-family: Work Sans;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 140%; /* 39.2px */
-    text-transform: capitalize;
-  }
-  .header__info-block-left-descr {
-    max-width: 320px;
-    color: var(--White, #FFF);
-    font-family: Work Sans;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 140%; /* 22.4px */
-    padding-top: 2px;
-    text-align: center;
     margin: 0 auto;
   }
   .header__info-block-left-btn {
@@ -465,7 +476,13 @@
   .header__body-left {
     width: 200px;
   }
-  .header__info-block-right {
+  .header__mob-info-block-right {
     width: 300px;
+  }
+  .header__info-block-right-image {
+    width: 300px;
+  }
+  .header__info-block-left-ratings {
+    margin-top: 0px;
   }
 }/*# sourceMappingURL=style.css.map */
