--- a/style.css
+++ b/style.css
@@ -9,15 +9,17 @@
   list-style: none;
 }
 
+/* -------------------HEADER TOP------------------------- */
 .header {
   width: 100%;
   background: var(--Background, #2B2B2B);
   height: 100vh;
+  /* -------HEADER TOP MOBILE---------------- */
   /* --------------HEADER INFO BLOCK-------------------- */
 }
 .header__body {
   padding-top: 10px;
-  max-width: 1300px;
+  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -56,7 +58,7 @@
   line-height: 140%; /* 22.4px */
 }
 .header__body-right-btn {
-  padding: 0px 30px;
+  width: 110px;
   height: 40px;
   display: flex;
   flex-direction: row;
@@ -80,7 +82,7 @@
 }
 .header .header__info-block {
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 70px auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -200,6 +202,14 @@
 }
 
 /* Стилі для великих екранів (дисплей максимум 1199рх) */
+@media (max-width: 1199px) {
+  .header__body {
+    padding: 7px 20px;
+  }
+  .header__info-block {
+    padding: 0px 20px;
+  }
+}
 /* Стилі для середніх екранів (дисплей максимум 991рх) */
 @media (max-width: 996px) {
   .header__info-block {
@@ -378,7 +388,7 @@
   }
 }
 /* Стилі для дуже малих екранів (дисплей максимум 575рх) */
-@media (max-width: 575px) {
+@media (max-width: 577px) {
   .header__mobile {
     display: block;
   }
@@ -405,6 +415,15 @@
     justify-content: space-between;
     max-width: 400px;
     margin: 0 auto;
+    transform: translateY(-100px);
+  }
+  .header__info-block-left-descr {
+    text-align: center;
+    margin: 0 auto;
+  }
+  .header__info-block-left-title {
+    text-align: center;
+    padding-bottom: 10px;
   }
   .header__info-block-left-btn {
     display: flex;
@@ -447,12 +466,12 @@
   }
   .header__mob-info-block-right {
     border-radius: 20px 20px;
-    width: 330px;
+    width: 300px;
     background: var(--Background---Secondary, #3B3B3B);
     margin-top: 10px;
   }
   .header__info-block-right-image {
-    width: 330px;
+    width: 300px;
   }
   .header__info-block-right-name {
     color: #FFF;
