--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,8 @@
     list-style: none;
     }
 
+
+    /* -------------------HEADER TOP------------------------- */
     .header{
         width: 100%;
         background: var(--Background, #2B2B2B);
@@ -15,7 +17,7 @@
 
         &__body{
             padding-top: 10px;
-            max-width: 1300px;
+            max-width: 1200px;
             margin: 0 auto;
             display: flex;
             flex-direction: row;
@@ -56,7 +58,7 @@
             line-height: 140%; /* 22.4px */
         }
         &__body-right-btn{
-            padding: 0px 30px;
+            width: 110px;
             height: 40px;
             display: flex;
             flex-direction: row;
@@ -73,6 +75,7 @@
             line-height: 140%; /* 22.4px */
         }
 
+        /* -------HEADER TOP MOBILE---------------- */
         &__mobile{
             width: 50px;
             height: 50px;
@@ -85,7 +88,7 @@
 
         .header__info-block{
             max-width: 1100px;
-            margin: 0 auto;
+            margin: 70px auto;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -169,8 +172,6 @@ line-height: 160%; /* 38.384px */
 text-transform: capitalize;
         }
 
-
-
         &__info-block-right{
             max-width: 530px;
             border-radius:20px 20px;
@@ -220,7 +221,14 @@ text-transform: capitalize;
 
     /* Стилі для великих екранів (дисплей максимум 1199рх) */
     @media (max-width: 1199px) { 
-     }
+        .header__body{
+            padding: 7px 20px;
+        }
+
+        .header__info-block{
+            padding: 0px 20px;
+        }
+    }
 
 /* Стилі для середніх екранів (дисплей максимум 991рх) */
     @media (max-width: 996px) { 
@@ -408,7 +416,7 @@ text-transform: capitalize;
         }
     }
 /* Стилі для дуже малих екранів (дисплей максимум 575рх) */
-    @media (max-width: 575px) { 
+    @media (max-width: 577px) { 
         .header__mobile{
             display: block;
         }
@@ -438,6 +446,15 @@ text-transform: capitalize;
             justify-content: space-between;
             max-width: 400px;
             margin: 0 auto;
+            transform: translateY(-100px);
+        }
+        .header__info-block-left-descr{
+            text-align: center;
+            margin: 0 auto;
+        }
+        .header__info-block-left-title{
+            text-align: center;
+            padding-bottom: 10px;
         }
         .header__info-block-left-btn{
             display: flex;
@@ -480,12 +497,12 @@ text-transform: capitalize;
         }
         .header__mob-info-block-right{
             border-radius: 20px 20px;
-            width: 330px;
+            width: 300px;
             background: var(--Background---Secondary, #3B3B3B);
             margin-top: 10px;
         }
         .header__info-block-right-image{
-            width: 330px;
+            width: 300px;
         }
         .header__info-block-right-name{
             color: #FFF;
@@ -520,3 +537,5 @@ text-transform: capitalize;
             margin-top: 0px;
         }
     }
+
+    
