--- a/style.scss
+++ b/style.scss
@@ -87,6 +87,7 @@
             width: 50px;
             height: 50px;
             display: none;
+            cursor: pointer;
         }
 
         &__mobile-line{
@@ -343,7 +344,7 @@ text-transform: capitalize;
         &__login{
             text-decoration: underline;
         }
-    }
+}
     .fullskrin__button-input[type="checkbox"]:checked ~ .fullskrin__start{
         display: block;
         display: flex;
@@ -461,6 +462,10 @@ font-style: normal;
 font-weight: 700;
 line-height: 160%; /* 35.2px */
 text-transform: capitalize;
+transition: 0.3s;
+        }
+        &__images-block-small-more:hover{
+            transform: scale(1.1);
         }
 
     &__images-block-name{
@@ -529,6 +534,26 @@ padding-top: 10px;
 
     /* Стилі для великих екранів (дисплей максимум 1199рх) */
     @media (max-width: 1199px) { 
+        .section-2{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .section-2__txt{
+            padding-left: 40px;
+            text-align: center;
+        }
+        .section-2__images{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 800px;
+        }
+        .section-2__images-block:nth-child(3){
+            display: none;
+        }
         .header__body{
             padding: 7px 20px;
         }
@@ -611,6 +636,14 @@ line-height: 160%; /* 38.384px */
 text-transform: capitalize;
         }
 
+        .section-2__images{
+            display: flex;
+            justify-content: space-between;
+            flex-direction: row;
+            align-items: center;
+            max-width: 700px;
+        }
+
     }
 
 /* Стилі для малих екранів (дисплей максимум 767рх) */
@@ -688,6 +721,16 @@ line-height: 160%; /* 38.384px */
 text-transform: capitalize;
         }
         
+
+        .section-2__images{
+            width: 320px;
+        }
+        .section-2__images-block:nth-child(2){
+            display: none;
+        }
+        .section-2__images-block{
+            margin: 0 auto;
+        }
     }
 
     @media(max-width:680px){
@@ -874,6 +917,25 @@ text-transform: capitalize;
             font-weight: 400;
             line-height: 140%; /* 22.4px */
         }
+
+        .section-2__txt-title{
+            color: var(--White, #FFF);
+            font-family: Work Sans;
+            font-size: 30px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 120%; /* 45.6px */
+            text-transform: capitalize;
+        }
+
+        .section-2__txt-descr{
+            font-family: Work Sans;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 160%; /* 35.2px */
+text-transform: capitalize;
+        }
     }
 
     @media (max-width: 385px) {
@@ -891,6 +953,29 @@ text-transform: capitalize;
         }
         .header__info-block-left-ratings{
             margin-top: 15px;
+        }
+
+        .section-2__txt{
+            margin: 0 auto;
+            width: 340px;
+        }
+        .section-2__txt-descr{
+            transform: translateX(-20px);
+        }
+        .section-2__txt-title{
+            transform: translateX(-10px);
+        }
+        .section-2__images-block-main-img{
+            width: 320px;
+        }
+        .section-2__images-block-small{
+            padding: 3px 10px;
+        }
+        .section-2__images-block-small-img{
+            width: 90px;
+        }
+        .section-2__images-block-small-more{
+            padding: 27px 10px;
         }
     }
 
