--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
   height: 100vh;
   position: relative;
   /* -------HEADER TOP MOBILE---------------- */
-  /* --------------HEADER INFO BLOCK-------------------- */
 }
 .header__body {
   padding-top: 10px;
@@ -141,7 +140,9 @@ body {
 .header .header__input {
   display: none;
 }
-.header .header__info-block {
+
+/* --------------HEADER INFO BLOCK-------------------- */
+.header__info-block {
   max-width: 1150px;
   margin: 70px auto;
   display: flex;
@@ -150,6 +151,7 @@ body {
   align-items: start;
   position: relative;
 }
+
 .header__info-block-left {
   max-width: 700px;
   display: flex;
@@ -157,6 +159,7 @@ body {
   align-items: start;
   justify-content: space-between;
 }
+
 .header__info-block-left-title {
   max-width: 400px;
   color: var(--White, #FFF);
@@ -167,6 +170,7 @@ body {
   line-height: 110%; /* 73.7px */
   text-transform: capitalize;
 }
+
 .header__info-block-left-descr {
   max-width: 520px;
   color: var(--White, #FFF);
@@ -178,6 +182,7 @@ body {
   text-transform: capitalize;
   padding-top: 15px;
 }
+
 .header__info-block-left-ratings {
   width: 320px;
   display: flex;
@@ -186,6 +191,7 @@ body {
   align-items: center;
   padding-top: 25px;
 }
+
 .header__info-block-left-rating-item-number {
   color: var(--White, #FFF);
   font-family: Space Mono;
@@ -195,6 +201,7 @@ body {
   line-height: 140%; /* 39.2px */
   text-transform: capitalize;
 }
+
 .header__info-block-left-rating-item-name {
   color: var(--White, #FFF);
   font-family: Work Sans;
@@ -204,6 +211,7 @@ body {
   line-height: 160%; /* 38.384px */
   text-transform: capitalize;
 }
+
 .header__info-block-right {
   max-width: 500px;
   border-radius: 20px 20px;
@@ -212,10 +220,12 @@ body {
   align-items: start;
   background: var(--Background---Secondary, #3B3B3B);
 }
+
 .header__info-block-right-image {
   max-width: 500px;
   border-radius: 20px 20px 0px 0px;
 }
+
 .header__info-block-right-name {
   color: #FFF;
   font-family: Work Sans;
@@ -227,6 +237,7 @@ body {
   padding-top: 5px;
   padding-left: 5px;
 }
+
 .header__info-block-right-creator {
   width: 120px;
   display: flex;
@@ -235,6 +246,7 @@ body {
   align-items: center;
   padding-bottom: 20px;
 }
+
 .header__info-block-right-avatar-name {
   color: #FFF;
   font-family: Work Sans;
@@ -243,6 +255,7 @@ body {
   font-weight: 400;
   line-height: 140%; /* 22.4px */
 }
+
 .header__mob-info-block {
   display: none;
 }
@@ -489,6 +502,125 @@ body {
   height: 300px;
 }
 
+.section-3 {
+  max-width: 1150px;
+  margin: 0 auto;
+  padding-top: 80px;
+}
+.section-3__top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+}
+.section-3__top-txt-title {
+  color: var(--White, #FFF);
+  font-family: Work Sans;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 45.6px */
+  text-transform: capitalize;
+}
+.section-3__top-txt-descr {
+  color: var(--White, #FFF);
+  font-family: Work Sans;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 35.2px */
+  text-transform: capitalize;
+}
+.section-3__top-btn {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 20px;
+  border: 2px solid var(--Call-to-Action, #A259FF);
+  color: #FFF;
+  height: 50px;
+  width: 180px;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 22.4px */
+}
+.section-3__blocks {
+  padding-top: 63px;
+  padding-bottom: 20px;
+}
+.section-3__line {
+  padding-top: 17px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.section-3__block-creator {
+  width: 240px;
+  height: 240px;
+  background-color: #3B3B3B;
+  border-radius: 20px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.section-3__block-creator:hover {
+  transform: scale(1.1);
+  filter: drop-shadow(0px 0px 10px rgba(241, 15, 15, 0.8666666667));
+}
+.section-3__creator-number {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background-color: rgb(43, 43, 43);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #858584;
+  top: 18px;
+  left: 18px;
+  transition: 0.3s;
+}
+.section-3__creator-title {
+  color: #FFF;
+  font-family: "Work Sans", sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%;
+  text-transform: capitalize;
+  text-align: center;
+}
+.section-3__creator-text {
+  color: var(--caption-label-text, #858584);
+  font-family: "Work Sans", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+.section-3__text-span {
+  color: var(--Text, #FFF);
+  font-family: "Space Mono", monospace;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+
+.mob-section-3__blocks {
+  display: none;
+}
+
 /* Стилі для великих екранів (дисплей максимум 1199рх) */
 @media (max-width: 1199px) {
   .section-2 {
@@ -516,6 +648,10 @@ body {
   }
   .header__info-block {
     padding: 0px 20px;
+  }
+  .section-3 {
+    padding-left: 13px;
+    padding-right: 13px;
   }
 }
 /* Стилі для середніх екранів (дисплей максимум 991рх) */
@@ -594,6 +730,66 @@ body {
     flex-direction: row;
     align-items: center;
     max-width: 700px;
+  }
+  .section-3 {
+    max-width: 900px;
+  }
+  .section-3__blocks {
+    display: none;
+  }
+  .mob-section-3__blocks {
+    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .section-3__line {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .section-3__creator-img {
+    width: 80px;
+  }
+  .section-3__creator-title {
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 30.8px */
+    text-transform: capitalize;
+  }
+  .section-3__creator-text {
+    color: var(--caption-label-text, #858584);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+  }
+  .section-3__text-span {
+    color: var(--Text, #FFF);
+    font-family: Space Mono;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+  }
+  .section-3__block-creator {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 350px;
+    height: 100px;
+    margin-top: 10px;
+  }
+  .section-3__creator-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: start;
   }
 }
 /* Стилі для малих екранів (дисплей максимум 767рх) */
@@ -676,8 +872,35 @@ body {
   .section-2__images-block {
     margin: 0 auto;
   }
+  .section-3__block-creator {
+    width: 310px;
+  }
+  .mob-section-3__blocks {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .section-3__top-txt-title {
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 39.2px */
+    text-transform: capitalize;
+  }
+  .section-3__top-txt-descr {
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+  }
+  /* Стилі для дуже малих екранів (дисплей максимум 575рх) */
 }
-@media (max-width: 680px) {
+@media (max-width: 777px) and (max-width: 680px) {
   .header__body-right-btn {
     height: 30px;
   }
@@ -711,8 +934,7 @@ body {
     height: 205px;
   }
 }
-/* Стилі для дуже малих екранів (дисплей максимум 575рх) */
-@media (max-width: 577px) {
+@media (max-width: 777px) and (max-width: 577px) {
   .header__mobile {
     display: block;
   }
@@ -868,8 +1090,11 @@ body {
     line-height: 160%; /* 35.2px */
     text-transform: capitalize;
   }
+  .section-3__top-btn {
+    display: none;
+  }
 }
-@media (max-width: 385px) {
+@media (max-width: 777px) and (max-width: 385px) {
   .header__body-left {
     width: 200px;
   }
@@ -884,6 +1109,7 @@ body {
   }
   .header__info-block-left-ratings {
     margin-top: 15px;
+    width: 300px;
   }
   .section-2__txt {
     margin: 0 auto;
