--- a/style.scss
+++ b/style.scss
@@ -1188,6 +1188,7 @@ text-transform: capitalize;
         .section-2__txt{
             margin: 0 auto;
             width: 340px;
+            transform: translateX(-10px);
         }
         .section-2__txt-descr{
             transform: translateX(-20px);
